--- a/index.html
+++ b/index.html
@@ -6,6 +6,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>JS Audio Viewer</title>
 
+  <title>JS Audio Viewer</title>
+  <meta name="description" content="Real-time audio data viewer using Fast Fourier Transform (FFT).">
+
+  <meta itemprop="name" content="JS Audio Viewer">
+  <meta itemprop="description" content="Real-time audio data viewer using Fast Fourier Transform (FFT).">
+  <meta itemprop="image" content="./assets/images/preview.png">
+
+  <meta property="og:url" content="https://ernane.dev">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="JS Audio Viewer">
+  <meta property="og:description" content="Real-time audio data viewer using Fast Fourier Transform (FFT).">
+  <meta property="og:image" content="./assets/images/preview.png">
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="JS Audio Viewer">
+  <meta name="twitter:description" content="Real-time audio data viewer using Fast Fourier Transform (FFT).">
+  <meta name="twitter:image" content="./assets/images/preview.png">
+
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="./assets/scripts/audio-viewer.js"></script>
 </head>
