feat: add readme and improve app information

--- a/index.html
+++ b/index.html
@@ -6,23 +6,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>JS Audio Viewer</title>
 
-  <title>JS Audio Viewer</title>
   <meta name="description" content="Real-time audio data viewer using Fast Fourier Transform (FFT).">
 
   <meta itemprop="name" content="JS Audio Viewer">
   <meta itemprop="description" content="Real-time audio data viewer using Fast Fourier Transform (FFT).">
-  <meta itemprop="image" content="./assets/images/preview.png">
+  <meta itemprop="image" content="https://raw.githubusercontent.com/ErnaneJ/ja-audio-viewer/main/assets/images/preview.png">
 
-  <meta property="og:url" content="https://ernane.dev">
+  <meta property="og:url" content="https://ernanej.github.io/ja-audio-viewer/">
   <meta property="og:type" content="website">
   <meta property="og:title" content="JS Audio Viewer">
   <meta property="og:description" content="Real-time audio data viewer using Fast Fourier Transform (FFT).">
-  <meta property="og:image" content="./assets/images/preview.png">
+  <meta property="og:image" content="https://raw.githubusercontent.com/ErnaneJ/ja-audio-viewer/main/assets/images/preview.png">
 
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="JS Audio Viewer">
   <meta name="twitter:description" content="Real-time audio data viewer using Fast Fourier Transform (FFT).">
-  <meta name="twitter:image" content="./assets/images/preview.png">
+  <meta name="twitter:image" content="https://raw.githubusercontent.com/ErnaneJ/ja-audio-viewer/main/assets/images/preview.png">
 
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="./assets/scripts/audio-viewer.js"></script>
